Added new CustomImage and Video components to mdx files.

--- a/a-jubilee-for-the-earth.mdx
+++ b/a-jubilee-for-the-earth.mdx
@@ -11,12 +11,20 @@ lat_lng: [38.9273, -114.2645]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/a-jubilee-for-the-earth.jpg"
+  alt="A person looking up at the universe and stars."
+  priority={true}
+/>
+
 By Deacon Tom Cervone, Ph.D.; Sister Maureen Houlihan, D.C.; and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
 
 **\_Editor’s note:** \_This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for
 Our Common Home, Laudato Si’\_\_
+
+## Introduction
 
 Did you know that in 2015, Pope Francis published an encyclical On Care for Our Common
 Home “Laudato Si’?” An encyclical is one of the highest forms of communication by a pope and
