--- a/a-team-effort-of-love.mdx
+++ b/a-team-effort-of-love.mdx
@@ -12,12 +12,20 @@ lat_lng: [38.9072, -77.0369 ]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/a-team-effort-of-love.jpg"
+  alt="group of people looking out into the sun together"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
 
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for
 Our Common Home, Laudato Si’_
+
+## Introduction
 
 Did you know that in 1970, President Richard Nixon signed the National Environmental Policy
 Act, which required some federal agencies to take part in certain regulations, policies, projects,
