--- a/biodiversity.mdx
+++ b/biodiversity.mdx
@@ -13,6 +13,12 @@ lat_lng: [3.4653, -62.2159]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/biodiversity.jpg"
+  alt="A photo of a forest with a river running through it."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
 **Our Planet Earth**
@@ -20,7 +26,7 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Author’s note:** _This worldwide website encourages, inspires, and informs citizens to act now, and to practice
 ecological principles in our journey “On Care for Our Common Home.”_
 
-**Introduction**
+## Introduction
 
 Biodiversity includes richness or the number of species, including the identity, dominance, and rarity of these
 species. Did you know the [main driver in the loss of biodiversity remains in humans’ use of land primarily for food
@@ -35,7 +41,7 @@ half of bird species in the United States are in decline](https://insideclimaten
 
 A recent study in _Nature Climate Change_ reported [scientists found 65% of insect populations they examined
 could go extinct over the next century](https://climate.nasa.gov/news/3231/climate-change-can-put-more-insects-at-risk-for-extinction/), while _Harvard University_ reported, “[over-exploitation, agriculture, and
-development have been the primary culprits in the dramatic loss of biodiversity](https://sitn.hms.harvard.edu/flash/2020/losing-ground/), which, when compounded by
+development have been the primary culprits in the dramatic loss of biodiversity](https://sitn.hms.harvard.edu/flash/2020/losing-ground/), which, when compounded by
 the effects of climate change, stand to wreak further havoc.”
 
 Biodiversity gives balance to nature, but when this balance is disrupted, the stability of an ecosystem could be in
@@ -66,15 +72,7 @@ growth needs. Avoiding and minimizing impacts to environmentally sensitive habit
 should not resort to urban sprawl. Conversely, they should use existing disturbed habitats, and avoid, minimize,
 or mitigate impacts.
 
-<iframe
-  width="800"
-  height="500"
-  src="https://www.youtube.com/embed/XAju0353w9I?si=H6hUQI2eNMYBCXJe"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen
-></iframe>
+<Video id="XAju0353w9I?si=H6hUQI2eNMYBCXJe" />
 
 Quote:
 
