--- a/can-we-cool-the-earth.mdx
+++ b/can-we-cool-the-earth.mdx
@@ -11,6 +11,12 @@ lat_lng: [44.3601, -71.0589 ]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/can-we-cool-the-earth.jpg"
+  alt="The planet with one side on fire."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -19,13 +25,15 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
 
+## Introduction
+
 Did you know the TV show “Highway to Heaven” produced many episodes about the
 environment? Merry Christmas from Grandpa (1989; Season 5/Episode 13) aired 33 years ago.
 It’s significant because many issues then －exist today. Similarly, Katharine Hayhoe, Ph.D., had
 a great video entitled “The most important thing you can do to fight climate change” (12/14/18).
 
 PBS/NOVA aired “Can we cool the Earth” (Ben Kalina, 10/22/20). Experts agree the first step
-for cooling the planet is preventing carbon dioxide (CO 2 ) and other greenhouse gases from
+for cooling the planet is preventing carbon dioxide (CO 2 ) and other greenhouse gases from
 entering the atmosphere. This documentary addressed a combination of seven methods:
 
 - direct air capture
@@ -52,11 +60,11 @@ sources and where to invest in new carbon sources. Using **compost** layered on 
 farmland is another way to increase plant growth 78% and soil carbon 37% in 3 years (Ben
 Kalina, “Can we cool the Earth,” PBS/NOVA).
 
-Biogas is produced when food or animal wastes are broken down by microorganisms in the
+Biogas is produced when food or animal wastes are broken down by microorganisms in the
 absence of oxygen. An example of a biogas is methane from landfills (“Your trash is emitting
 methane in the landfill. Here’s why it matters for the climate,” Bruggers et al., 7/13/21, NPR).
 Methane is more than 25 times stronger than CO 2 at trapping heat in the atmosphere (EPA,
-6/9/2022). Air travel is another source of  air pollution . (“New Concept hybrid planes could
+6/9/2022). Air travel is another source of air pollution . (“New Concept hybrid planes could
 reduce deadly air pollution by 95%,” Tiffany Duong, 2/12/21, EcoWatch).
 
 Consider joining Dr. Douglas Tallamy to learn how small actions by individuals can
