--- a/carbon-neutrality.mdx
+++ b/carbon-neutrality.mdx
@@ -12,6 +12,12 @@ lat_lng: [37.9715, -87.5715 ]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/carbon-neutrality.jpg"
+  alt="factory emitting smoke"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -19,6 +25,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 The majority of greenhouse gases in the United States, like carbon dioxide, come from burning
 fossil fuels for electricity, heat and transportation (U.S. Environmental Protection Agency). They
