--- a/cry-of-the-poor.mdx
+++ b/cry-of-the-poor.mdx
@@ -50,20 +50,17 @@ Samaritans. Humanitarian aid is never a crime.
 
 ## What Can You Do?
 
-### **Become More Active in the Legislative Process** - Develop a sensitivity to recognizing many people are poor
-
+**Become More Active in the Legislative Process** - Develop a sensitivity to recognizing many people are poor
 from how mankind has treated the Earth. A solution is to become more active in regulations like the Federal
 Action in 1994 that addressed [Environmental Justice in Minority Populations and Low-Income Populations](https://www.epa.gov/laws-regulations/summary-executive-order-12898-federal-actions-address-environmental-justice) as
 signed by President William J. Clinton. It was a landmark order that brought environmental protection for all
 communities.
 
-### **Fund Charitable Organizations** - There are many reputable organizations we can select in helping the poor.
-
+**Fund Charitable Organizations** - There are many reputable organizations we can select in helping the poor.
 Do what you can to help them live a life of purpose, so they can be citizens of a country that truly believes in its
 people, and loves to share each others talents and resources.
 
-### **Support Steps for the Poor to Help Others** - The poor have a multitude of abilities that can individually and
-
+**Support Steps for the Poor to Help Others** - The poor have a multitude of abilities that can individually and
 collectively help society. Be aware of these assets, and welcome the poor to work towards gaining a place of
 value in society. They are your brothers and sisters, and many are simply asking for a path to citizenship and
 conveyance of rights like our forefathers were given in the early part of the 20 th century.
