--- a/earth-day-and-the-catholic-church.mdx
+++ b/earth-day-and-the-catholic-church.mdx
@@ -12,7 +12,15 @@ lat_lng: [43.7844, -88.7879]
 news_category: "Our Planet Earth Article"
 ---
 
-###### <sub>Gaylord Nelson received the Presidential Freedom Award from President Bill Clinton in 1995.</sub>
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/earth-day-and-the-catholic-church.jpg"
+  alt="Presidential Freedom Aaward Given to Gaylord Nelson by President Bill Clinton in 1995"
+  priority={true}
+/>
+<sub>
+  Gaylord Nelson received the Presidential Freedom Award from President Bill
+  Clinton in 1995.
+</sub>
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
@@ -20,6 +28,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 
 _Editor’s note: This series takes a deeper look at Pope Francis’ 2015 encyclical － “On Care for Our Common
 Home, Laudato Si’”_
+
+## Introduction
 
 Gaylord Nelson, who founded Earth Day, saw, in the 1960’s, a deteriorating environment and Anti-Vietnam
 War protests. Both gave him the idea for a “teach-in” about environmental issues on April 22, 1970, the first
@@ -37,7 +47,7 @@ develop policies so that, in the next few years, the emission of carbon dioxide 
 can be drastically reduced, e.g., substituting for fossil fuels and developing sources of renewable energy”
 (Laudato Si’, 26).
 
-In 2010, Pope Benedict XVI asked people to take action to safeguard the climate, saying, “degradation of the
+In 2010, Pope Benedict XVI asked people to take action to safeguard the climate, saying, “degradation of the
 environment is a pressing moral problem that threatens peace and human life itself. We cannot remain
 indifferent to what is happening around us, for the deterioration of any one part of the planet affects us all”
 (Pope’s peace message focuses on environment, 1/1/2010).
