--- a/earth’s-atmosphere.mdx
+++ b/earth’s-atmosphere.mdx
@@ -12,6 +12,12 @@ lat_lng: [31.3452, -104.5124 ]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/earth’s-atmosphere.jpg"
+  alt="A shot of Earth's atmosphere from above the clouds looking at the sun"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -19,6 +25,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 During a nice day, what do you see in the sky? Maybe a blue sky with drifting white clouds and
 sunlight striking (heating) the Earth? It’s so glorious and vast from Earth; but from space, it’s so
