--- a/global-warming-and-climate-change.mdx
+++ b/global-warming-and-climate-change.mdx
@@ -11,6 +11,12 @@ lat_lng: [40.7128, -74.0060 ]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/global-warming-and-climate-change.jpg"
+  alt="Global Warming and Climate Change sign to 'act now'"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -18,6 +24,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 In previous articles, we’ve highlighted Pope Francis’ efforts in “Laudato Si’” and discussed
 many ecological principles. But there’s more, such as melting of the Earth’s permafrost; melting
