--- a/good-news-about-pope-francis-laudato-si.mdx
+++ b/good-news-about-pope-francis-laudato-si.mdx
@@ -11,6 +11,12 @@ lat_lng: [55.8714, -4.2546]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/good-news-about-pope-francis-laudato-si.jpg"
+  alt="Pop Francis Waving to a crowd"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -18,6 +24,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 “On Sept. 5, 2021, more than 200 medical journals released an unprecedented joint editorial that
 urged world leaders to act. The science is unequivocal, they write. A global increase of 1.5⁰ C
