--- a/grasslands-pollinators-and-our-health.mdx
+++ b/grasslands-pollinators-and-our-health.mdx
@@ -12,6 +12,12 @@ lat_lng: [40.5121, -88.9948]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/grasslands-pollinators-and-our-health.jpg"
+  alt="Flat grassland with a few trees in the background. The sky is blue with a few clouds."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -19,6 +25,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Grasslands go by different names. In the U.S. Midwest, they’re called prairies; in South
 America, pampas; in Central Eurasia, steppes; and in Africa, savannas. What they all have in
