--- a/healthy-soils-reduce-flooding-global-warming-and-run-off.mdx
+++ b/healthy-soils-reduce-flooding-global-warming-and-run-off.mdx
@@ -11,6 +11,12 @@ lat_lng: [28.7950, -91.1058]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/healthy-soils-reduce-flooding-global-warming-and-run-off.jpg"
+  alt="Soil with plants growing in it"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -18,6 +24,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Did you know that, through years of soil degradation, nitrogen, phosphorus and sediments have
 run off into rivers that enter the Mississippi River creating a dead zone in the Gulf of Mexico the
