--- a/how-do-droughts-affect-people.mdx
+++ b/how-do-droughts-affect-people.mdx
@@ -14,6 +14,12 @@ lat_lng: [19.0643, 13.5437]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/how-do-droughts-affect-people.jpg"
+  alt="a drought-stricken field with a dead tree"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
 Our Planet Earth
@@ -21,7 +27,7 @@ Our Planet Earth
 **_Author’s note_**: _This worldwide website encourages, inspires, and informs citizens to act now, and to practice
 ecological principles in our journey On Care for Our Common Home._
 
-# Introduction
+## Introduction
 
 Did you know future droughts in the world may even surpass the [Sahel disaster](https://www2.cgd.ucar.edu/cas/adai/news/Dai_Drought_MSNBC.htm)? Droughts in the African
 countries of the Sahel caused massive losses of agricultural production and livestock, loss of human lives to
@@ -43,9 +49,9 @@ farming communities could make such events more frequent and deadly.
 
 In the 1930’s, we had the drought-stricken Dust Bowl. [It killed around 7,000 people and left 2 million homeless](https://www.cbsnews.com/news/dust-bowl-heat-wave-climate-change-twice-as-likely-study-says/).
 The heat, drought and dust storms had a cascade effect too on the U.S. agriculture. Wheat production fell by
-36% and maize production  plummeted by 48%.
+36% and maize production plummeted by 48%.
 
-# What Can You Do?
+## What Can You Do?
 
 **Reduce loss of soil** - “ [Soil is a living thing](https://www.nrcs.usda.gov/sites/default/files/2022-12/Montana-Soil-Is-Alive.pdf). It is very slowly moving, changing and growing all the time. Just
 like other living things, soil breathes and needs air and water to stay alive. Healthy, living soil provides all of us
@@ -60,20 +66,12 @@ greatly in controlling erosion and keeping chemicals and sediments from entering
 A [two-stage ditch helps keep water clear and limits the input of farm chemicals](https://www.indianawatershedinitiative.com/uploads/8/0/9/5/80953414/davis_et_al_2015.pdf). Such ditches have benches that are [planted with grasses that significantly absorb or reduce phosphorus concentrations and reduce turbidity](https://www.indianawatershedinitiative.com/uploads/8/0/9/5/80953414/mahl_et_al_2015.pdf). Nitrogen removal was also increased especially when benches were flooded. These two-stage ditches act similar to
 a constructed wetland for wastewater treatment.
 
-<iframe
-  width="800"
-  height="500"
-  src="https://www.youtube.com/embed/jyYIqR5jCls?si=CVo--V62cKfPgxfU"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen
-></iframe>
+<Video id="jyYIqR5jCls?si=CVo--V62cKfPgxfU" />
 
 Quote:
 
 > “Essentially, all life depends upon the soil… There can be no life without soil and no soil without life; they
-> have evolved together.” - Dr. Charles E. Kellogg, Soil Scientist and Chief of the USDA’s Bureau for Chemistry
+> have evolved together.” - Dr. Charles E. Kellogg, Soil Scientist and Chief of the USDA’s Bureau for Chemistry
 > and Soils
 
 _Dr. Tom Cervone is a deacon in the Evansville Diocese (Indiana) with 50 years of experience in ecology. He
