--- a/living-smart.mdx
+++ b/living-smart.mdx
@@ -12,6 +12,12 @@ lat_lng: [60.1282, 18.6435 ]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/living-smart.jpg"
+  alt="a red neon sign with the word 'change'"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
 Our Planet Earth
@@ -19,7 +25,7 @@ Our Planet Earth
 **_Author’s note_**: _This worldwide website encourages, inspires, and informs citizens to act now, and to practice
 ecological principles in our journey On Care for Our Common Home._
 
-## <u>Introduction</u>
+## Introduction
 
 Did you know [July 2023 was hotter than any other month on record](https://www.nasa.gov/press-release/nasa-clocks-july-2023-as-hottest-month-on-record-ever-since-1880) as felt by billions around the world?
 Throughout the country, Americans are now experiencing firsthand, the effects of climate change. To address
@@ -40,7 +46,7 @@ Knowing our actions affect ourselves, families, and many generations to come, it
 to a “tipping” point of no return as said by the [Dalai Lama](https://xrpdx.org/tipping-points-and-greta-and-the-dalai-lama-oh-my/). At this time, our only living smart option is to live in
 a way that maximizes our returns.
 
-## <u>What Can You Do?</u>
+## What Can You Do?
 
 **Reduce Greenhouse Gases escaping into the Atmosphere** - Methods include: transforming our energy needs
 from non-renewable to renewable; slowly reduce the number of miles we travel in cars, trucks, planes, or trains;
@@ -62,15 +68,7 @@ with trees to keep cool in summer, and warm in winter. Also, consider using ener
 advantage of the aspect of your home, where generally the south-facing side is hotter than north-facing, and
 west-facing is warmer than east-facing. Living smart is very important.
 
-<iframe
-  width="800"
-  height="500"
-  src="https://www.youtube.com/embed/0k2-SzlDGko?si=vg36II19V9e8bL1r"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen
-></iframe>
+<Video id="0k2-SzlDGko?si=vg36II19V9e8bL1r" />
 
 > Quote:
 > “Learn from yesterday, live for today, hope for tomorrow. The important thing is not to stop questioning” <br/>
