--- a/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.mdx
+++ b/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.mdx
@@ -11,6 +11,11 @@ lat_lng: [41.8719, 12.5674]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/new-year-resolution-register-in-laudato-si-action-platform-a-global-community.jpeg"
+  alt="Hands holding a globe."
+  priority={true}
+/>
 Image Credit to: [Vatican News](https://www.vaticannews.va/en/church/news/2020-05/laudato-si-inspires-new-communication-project.html)
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
@@ -20,7 +25,7 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **_Author’s note:_** _This worldwide website encourages, inspires, and informs citizens to act now, and to practice
 ecological principles in our journey “On Care for Our Common Home.”_
 
-**Introduction**
+## Introduction
 
 Did you know that you can register in the Laudato Si’ Action Platform (LSAP) and announce your proposed
 action(s) to help our planet earth? This is a pro-active, and very much needed response that follows the seven
@@ -37,16 +42,16 @@ goals of Pope Francis for his assigned **seven commitment groups.** They are:
 For more information on registration, please go to info@laudatosiactionplatform.org where you’ll find help
 from a staff member. The Director of LSAP is John Mundell, P.E., L.P.G. located in Indianapolis, Indiana.
 
-# **GENERAL STEPS IN THE REGISTRATION PROCESS**
+## GENERAL STEPS IN THE REGISTRATION PROCESS
 
 **Step #1: Sign-up.** A commitment group (one of the above) contacts LSAP and signs up. It’s free and easy!
 
 <br />
-**Step #2: Write a Short Reflection.** The commitment group writes a short reflection
+**Step #2: Write a Short Reflection.** The commitment group writes a short reflection
 that commits to the LSAP. If you have a mission statement, that may help generate
 thoughts for your reflection.
 <br />
-**Step #3: Write an Action Plan.** Talking with others in the commitment group, an
+**Step #3: Write an Action Plan.** Talking with others in the commitment group, an
 Action Plan is created that announces your intention to follow the seven platform
 goals of Pope Francis. The Plan can be simple or more complex depending upon the
 wishes of the commitment group. It simply needs to be something that is doable.
@@ -86,17 +91,10 @@ tell others what you are doing, and tell them they can register too. With them o
 board, even more improvements will happen. Registration is open to all children of
 God.
 
-<iframe
-  width="800"
-  height="500"
-  src="https://www.youtube.com/embed/qPrasrX5P20?si=yXujbWths_3MMflQ"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen
-></iframe>
+<Video id="qPrasrX5P20?si=yXujbWths_3MMflQ" />
 
-Quote: Scott Russell Sanders, Professor Emeritus in English from Indiana University (Bloomington) wrote a
+Quote:
+Scott Russell Sanders, Professor Emeritus in English from Indiana University (Bloomington) wrote a
 brilliant [article in the Notre Dame Magazine](https://magazine.nd.edu/stories/mending-the-riven-planet/) . One paragraph from the above article is: “No amount of human effort can undo all the damage. We can’t mend every broken strand in the web of life. But we can mend some.
 We can stitch up tears in our local lands and waters, in our neighborhoods and communities, trusting that people
 elsewhere, everywhere, will do the same in their own home regions.”
