--- a/oceans-coastlines-and-the-great-lakes.mdx
+++ b/oceans-coastlines-and-the-great-lakes.mdx
@@ -13,6 +13,12 @@ lat_lng: [32.7158, -79.7893]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/oceans-coastlines-and-the-great-lakes.jpg"
+  alt="Coastline with forest"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -20,6 +26,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Did you know the that U.S. Department of the Interior protects coastlines for the Atlantic and
 Pacific Oceans, Gulf of Mexico, and our five Great Lakes? Lake Michigan touches 45 miles of
@@ -57,7 +65,7 @@ coastlines are being adversely affected by plastic. Please visit: Five Simple Ch
 Move You Closer to a Plastic-Free Home (Earth 911, M. Somerville, 3/8/19) for reducing
 plastic use.
 
-The Great Lakes also are very important natural resources. “They are the world’s largest surface
+The Great Lakes also are very important natural resources. “They are the world’s largest surface
 freshwater ecosystem and contain 20 percent of all surface freshwater on the planet. More than
 35 million people in eight states and Canada depend on the Great Lakes for drinking water. The
 Great Lakes watershed provides habitat for wildlife – with millions of migratory birds passing
