--- a/only-you-can-prevent-wildfires.mdx
+++ b/only-you-can-prevent-wildfires.mdx
@@ -12,11 +12,19 @@ lat_lng: [39.4075, -120.3591]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/only-you-can-prevent-wildfires.jpg"
+  alt="burning forest with smoke in the air"
+  priority={true}
+/>
+
 _Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 Our Planet Earth_
 
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical－ On Care for Our Common
 Home, Laudato Si’_
+
+## Introduction
 
 Did you know that nearly 85% of wildfires in the United States are caused by humans (2000-2017 data based on
 Wildland Fire Management Information, and U.S. Forest Service Research Data Archive), while others by
