--- a/pollution-waste-and-a-throwaway-culture.mdx
+++ b/pollution-waste-and-a-throwaway-culture.mdx
@@ -13,6 +13,12 @@ lat_lng: [-8.4095, 115.1889]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/pollution-waste-and-a-throwaway-culture.jpg"
+  alt="trash littered all over the beach."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -20,7 +26,9 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for
 Our Common Home, Laudato Si’_
 
-Did you know air pollutants can cause health problems like cancer, and change the Earth’s
+## Introduction
+
+Did you know air pollutants can cause health problems like cancer, and change the Earth’s
 climate too? For instance, greenhouse gases, like carbon dioxide, methane, and nitrous oxide
 absorb heat, and increase air and ocean temperatures resulting in global warming. It is global
 warming ― warmer temperatures, melting glaciers, and increasing sea levels ― that causes
