--- a/praise-be-to-you-my-lord.mdx
+++ b/praise-be-to-you-my-lord.mdx
@@ -13,12 +13,20 @@ lat_lng: [-33.4883, 149.5350]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/praise-be-to-you-my-lord.jpg"
+  alt="Sign saying 'one world' with a globe in the middle."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
 **Our Planet Earth**
 
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical － On Care for Our Common
 Home, Laudato Si’_
+
+## Introduction
 
 Do you know how important you are? For every stewardship decision you make, you change and impact the
 world! As good and faithful stewards, and as a Christian community, we are required to praise, seek and follow
