--- a/rethink-reduce-reuse-recycle-restore.mdx
+++ b/rethink-reduce-reuse-recycle-restore.mdx
@@ -11,12 +11,20 @@ lat_lng: [52.5226, 13.3796]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/rethink-reduce-reuse-recycle-restore.jpg"
+  alt="Tree with signs that say Reuse and Recycle."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
 **Our Planet Earth**
 
 _Editor’s note: This series takes a deeper look at Pope Francis’ 2015 encyclical － “On Care for Our Common
 Home, Laudato Si’”_
+
+## Introduction
 
 There are simple and economic ways to live an environmentally sensitive and thoughtful lifestyle. For instance,
 we could rethink, reduce, reuse, recycle and restore. Applying these five R’s will reduce our carbon footprint,
