--- a/righting-wrongs-through-legislation.mdx
+++ b/righting-wrongs-through-legislation.mdx
@@ -11,7 +11,15 @@ lat_lng: [45.5019, -73.5674]
 news_category: "Our Planet Earth Article"
 ---
 
-###### <sub>Americans once used DDT with abandon, as on this Long Island, New York, beach, ca. 1945. (Pictorial Press Ltd/Alamy Stock Photo)</sub>
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/righting-wrongs-through-legislation.jpg"
+  alt="Americans once used DDT with abandon, as on this Long Island, New York, beach, ca. 1945."
+  priority={true}
+/>
+<sub>
+  Americans once used DDT with abandon, as on this Long Island, New York, beach,
+  ca. 1945. (Pictorial Press Ltd/Alamy Stock Photo)
+</sub>
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
@@ -19,6 +27,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 
 _Editor’s note: This series takes a deeper look at Pope Francis’ 2015 encyclical － “On Care for Our Common
 Home, Laudato Si’”_
+
+## Introduction
 
 Historically, we’ve learned much about righting wrongs to promote environmental protection. Two notable
 authors are Aldo Leopold (“A Sand County Almanac”) and Rachel Carson (“Silent Spring”). Both were helpful
