--- a/sanctuaries-in-nature.mdx
+++ b/sanctuaries-in-nature.mdx
@@ -11,6 +11,12 @@ lat_lng: [38.3837, -87.3254]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/sanctuaries-in-nature.jpg"
+  alt="Tree in a field."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -18,6 +24,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 A nature sanctuary is a protected area for animals, plants and natural communities. In Indiana,
 we have three National Wildlife Refuges – Muscatatuck, Patoka River and Big Oaks. In
