--- a/save-the-dirt.mdx
+++ b/save-the-dirt.mdx
@@ -14,6 +14,12 @@ lat_lng: [53.3963, 62.9093]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/save-the-dirt.jpg"
+  alt="Dirt and soil in a forest."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -21,6 +27,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Dave Hudak, a former Field Office Supervisor for the U.S. Fish and Wildlife Service, showed
 great wisdom when he’d say, “Save the dirt.” He was really saying, “Save the soil.” If you give
@@ -75,7 +83,7 @@ Mulching: Effects on Soils, Crop Yield, and Pests”).
 “... if this is to be a permanent nation, we must save this most indispensable of all our God-given
 assets － the soil from which comes our food and raiment (clothing). If we fail in this, remember
 that, much sooner than we have expected, this will be a nation of subsoil (i.e. below topsoil)
-farmers.” - H.H. Bennett 1933 (Father of Soil Conservation).
+farmers.” - H.H. Bennett 1933 (Father of Soil Conservation).
 
 _Dr. Tom Cervone is a deacon at Holy Redeemer Catholic Church in Evansville, Indiana with 50
 years of experience in ecology. He graduated from St. Bonaventure University, a Franciscan
