--- a/saving-the-american-chestnut-tree.mdx
+++ b/saving-the-american-chestnut-tree.mdx
@@ -9,6 +9,11 @@ lat_lng: [35.9940, -78.8986]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/saving-the-american-chestnut-tree.webp"
+  alt="courtesy of the Forest History Society, Durham, N.C., circa 1909/1910. A man next to a large American Chestnut tree."
+  priority={true}
+/>
 <sub>
   Photo courtesy of the Forest History Society, Durham, N.C., circa 1909/1910
 </sub>
@@ -25,7 +30,7 @@ Our Planet Earth
 **_Author’s note_**: _This worldwide website encourages, inspires, and informs citizens to act now, and to practice
 ecological principles in our journey On Care for Our Common Home._
 
-**Introduction**
+## Introduction
 
 In 1904, a fungal disease, _Cryphonectria parasitica_, was introduced from Japanese [chestnut trees brought into
 the Bronx Zoo](https://www.npr.org/local/305/2021/10/18/1047023029/the-american-chestnut-was-wiped-out-a-century-ago-could-it-make-a-comeback). By the year 1906, [98% of the chestnut trees in the Bronx](https://patriciatemplesphotography.com/2020/02/06/trees-and-their-stories-2/) were infected. In 40 years, 4 billion
@@ -44,21 +49,13 @@ wildlife and humans. Chestnut wood was also used for log cabin foundations, fenc
 years and had 17-foot diameters (largest). Please visit the podcast of Joe Lamp’l on [Restoring the American
 Chestnut: An All-Out Effort to Save this Iconic Species](https://joegardener.com/podcast/restoring-the-american-chestnut/).
 
-**What Can You Do?**
+## What Can You Do?
 
 [The American Chestnut Foundation](https://tacf.org/) (TACF) is leading the rescue mission. [Since 1983, they’ve tried many
 methods](https://tacf.org/science-strategies/3bur/) to create “a disease tolerant and genetically diverse population of American chestnut trees that will be
 adaptable to broad and changing climates.” Please watch their trailer below and become a member.
 
-<iframe
-  width="800"
-  height="500"
-  src="https://www.youtube.com/embed/-HADqJgYMJ0?si=ostyo-UpxWjyFBnB&amp;start=1"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen
-></iframe>
+<Video id="-HADqJgYMJ0?si=ostyo-UpxWjyFBnB" />
 
 Methods for rescuing the American Chestnut include:
 
