--- a/seventh-anniversary-of-laudato-si.mdx
+++ b/seventh-anniversary-of-laudato-si.mdx
@@ -12,6 +12,12 @@ lat_lng: [14.5995, 120.9842]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/seventh-anniversary-of-laudato-si.jpg"
+  alt="Pope Francis and Laudato Si'"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -19,6 +25,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Why should we care about this anniversary? Maybe because anniversaries become useful when we
 use them to ask questions like, “Have we listened to Pope Francis, and is the temperature of the Earth
