--- a/species-of-greatest-conservation-need.mdx
+++ b/species-of-greatest-conservation-need.mdx
@@ -14,6 +14,12 @@ lat_lng: [38.9232, -87.0194]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/species-of-greatest-conservation-need.jpg"
+  alt="An Indiana bat that was captured and released for research."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -21,6 +27,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Did you know Indiana has a list of 157 endangered and special-concern wildlife species (Indiana
 Department of Natural Resources, Division of Fish and Wildlife, November 2020)? To address
