--- a/spirituality.mdx
+++ b/spirituality.mdx
@@ -12,6 +12,12 @@ lat_lng: [3.4653, 62.2159]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/spirituality.jpg"
+  alt="Statue of Jesus."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
 Our Planet Earth
@@ -19,7 +25,7 @@ Our Planet Earth
 **Author’s note:** _This worldwide website encourages, inspires, and informs citizens to act now, and to practice
 ecological principles in our journey “On Care for Our Common Home.”_
 
-**Introduction**
+## Introduction
 
 Did you know [spirituality involves the recognition](https://www.rcpsych.ac.uk/docs/default-source/members/sigs/spirituality-spsig/what-is-spirituality-maya-spencer-x.pdf) or feeling or belief that there is something greater than
 yourself, something more to being human than a sensory experience? Dr. Maya Spencer from the Royal College
@@ -29,8 +35,8 @@ our universe.”
 
 Spirituality gives us eyes to see and a heart to love nature which is not something to exploit nor take for granted.
 Indigenous people have practiced for years living with and respecting nature. Despite representing less than
-5% of the world’s population, indigenous peoples steward more than [a quarter of Earth’s land and seas, and
-protect 80% of our global biodiversity](https://www.conservation.org/blog/3-ways-indigenous-knowledge-protects-nature). But for all their efforts in the Brazilian Amazon, they’ve been beaten
+5% of the world’s population, indigenous peoples steward more than [a quarter of Earth’s land and seas, and
+protect 80% of our global biodiversity](https://www.conservation.org/blog/3-ways-indigenous-knowledge-protects-nature). But for all their efforts in the Brazilian Amazon, they’ve been beaten
 and killed by drug [trafficking cartels, and companies mining, land grabbing, and conducting illegal logging](https://news.mongabay.com/2022/08/crime-and-no-punishment-impunity-shrouds-killings-of-indigenous-amazonian-defenders/).
 
 Since the early 1970s, the Amazon has lost much of its forest, and scientists are concerned that deforestation,
@@ -44,7 +50,7 @@ into the Senate with Senators Braun (IN-R) and Schatz (D-HI) serving as cosponso
 the importation of products made wholly or in part of certain commodities produced on land undergoing illegal
 deforestation.
 
-## **What Can You Do?**
+## What Can You Do?
 
 **Pray for an Ecological Conversion** - An example is when St. Pope John Paul II hosted 60 different religions at
 Assisi, Italy in 1986 to pray for peace. It brought together different religions under one purpose, to love each
@@ -61,15 +67,7 @@ tell them how we feel about issues. One way is to support the FOREST Act of 2023
 acknowledging Senator Mike Braun and Senator Brian Schatz for cosponsoring it, and contacting the World
 Wildlife Fund (lauren.gleason@wwfus.org) or Environmental Investigation Agency U.S. (dstilley@eia-global.org) for more information. Reach out to them respectfully!
 
-<iframe
-  width="800"
-  height="500"
-  src="https://www.youtube.com/embed/6Yk1pGlOGzw?si=9hxnicnN7Le0n43k"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen
-></iframe>
+<Video id="6Yk1pGlOGzw?si=9hxnicnN7Le0n43k" />
 
 Quote:
 
