--- a/ten-eco-commandments-for-earth-citizens.mdx
+++ b/ten-eco-commandments-for-earth-citizens.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Ten Eco-Commandments for Earth Citizens"
-date: "2023-6-30"
+date: "2023-06-30"
 excerpt: "For nearly three years, this column in The Message has consistently given good reasons to be less consumer-
 driven and more eco-friendly. It has promoted “Laudato Si’” to all people and to all religions in the world, as
 requested by Pope Francis - including through his “Ten Commandments for Climate Change” (See What can we
@@ -11,16 +11,23 @@ lat_lng: [48.8566, 2.3522]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/ten-eco-commandments-for-earth-citizens.jpg"
+  alt="Pope Francis"
+  priority={true}
+/>
 <sub>
   <sup>Image credit CNN</sup>
 </sub>
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
-Our Planet Earth
+**Our Planet Earth**
 
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical － On Care for Our Common
 Home, Laudato Si’_
+
+## Introduction
 
 Before her death, a reporter friend said she thought it was very important for her readers “to see a need before
 they would act.”
@@ -34,7 +41,7 @@ Similarly, a book entitled “The Ten Commandments for the Environment: Pope Ben
 Creation and Justice,” by Woodeene Koenig-Bricker (6/1/2009) is a great resource.
 
 On March 9, 2023, Cardinal Michael Czerny, Prefect of the Vatican Dicastery for Promoting Integral Human
-Development said, “the  majority of people are now aware of the calamitous threats posed by climate change,
+Development said, “the majority of people are now aware of the calamitous threats posed by climate change,
 but the real problem is not convincing people that it’s happening, but rather their indifference and despair in the
 face of that reality” (Brian Roewe, Earthbeat, 3/11/2023).
 
