--- a/the-importance-of-biodiversity.mdx
+++ b/the-importance-of-biodiversity.mdx
@@ -14,12 +14,20 @@ lat_lng: [45.2538, -69.4455]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/the-importance-of-biodiversity.jpg"
+  alt="a wetland on a sunny day."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
 
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for
 Our Common Home, Laudato Si’_
+
+## Introduction
 
 Did you know many animals and plants are becoming extinct in the world, due to
 overpopulation, overcrowding, and overconsumption? All species on Earth are gifts from God,
