--- a/the-most-efficient-ecosystems-for-carbon-storage.mdx
+++ b/the-most-efficient-ecosystems-for-carbon-storage.mdx
@@ -12,12 +12,20 @@ lat_lng: [25.2997, -81.1538]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/the-most-efficient-ecosystems-for-carbon-storage.jpg"
+  alt="jungle with water and trees all around."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
 **Our Planet Earth**
 
 _Editor’s note: This series takes a deeper look at Pope Francis’ 2015 encyclical － “On Care for Our Common
 Home, Laudato Si’”_
+
+## Introduction
 
 “Science tells us, every day with more precision, that it is necessary to act with urgency – if we want to have the
 hope of avoiding radical changes in the climate and catastrophes. We have just a few years – scientists calculate
