--- a/the-sun.mdx
+++ b/the-sun.mdx
@@ -12,12 +12,20 @@ lat_lng: [33.4024, -8.9286 ]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/the-sun.jpg"
+  alt="Coastline and beach with waves crashing on the shore."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
 **Our Planet Earth**
 
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical － “On Care for Our Common
 Home, Laudato Si’”_
+
+## Introduction
 
 “God is the friend of silence. See how nature – trees, flowers, grass – grow in silence; see the stars, moon, and
 sun, how they move in silence…We need silence …. to touch souls” (Mother Teresa).
