--- a/the-value-of-forests-and-trees.mdx
+++ b/the-value-of-forests-and-trees.mdx
@@ -12,12 +12,20 @@ lat_lng: [38.8375, -120.8958]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/the-value-of-forests-and-trees.jpg"
+  alt="Forest with trees and sunlight coming through the trees."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
 
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for
 Our Common Home, Laudato Si’_
+
+## Introduction
 
 Did you know that, in 1800, Indiana had over 83% of its land area in forests? And by 1900,
 forests made up less than 7% (Sam Carman, IDNR, Div. of Forestry)? Also, did you know some
@@ -45,14 +53,14 @@ carbon emissions. Saving Nature, Inc. (Carbon Footprint Calculator) says “it t
 trees to offset the average American’s emissions today, with each tree absorbing about 31 lbs. of
 carbon dioxide each year.” So, we need to preserve trees we have now and plant more.
 
-Legislation like The Trillion Tree Act promotes the planting of more trees, and the management
+Legislation like The Trillion Tree Act promotes the planting of more trees, and the management
 and regeneration of these new trees (Ann Bartuska, 4/6/20, Resources Magazine). ForestIN plans
 to plant a million trees in Indiana by 2025. Similarly, Carbon Neutral Indiana receives funds it
 puts directly toward planting trees and managing forests. With such help, suitable tree species
 will be planted and preserved forever. Please contact an arborist for help in planting trees!
 
 Let’s look at trees – like Bob Ross – the late American painter. He said, &quot;There&#39;s nothing wrong
-with having a tree as a friend.” In addition, children love naming trees at home because trees
+with having a tree as a friend.” In addition, children love naming trees at home because trees
 have always been our friends. An excellent book on trees is “The Hidden Life of Trees – What
 They Feel, How They Communicate,” by Peter Wohlleben.
 
