--- a/two-year-anniversary-of-our-mother-earth-columns-in-the-message.mdx
+++ b/two-year-anniversary-of-our-mother-earth-columns-in-the-message.mdx
@@ -11,6 +11,12 @@ lat_lng: [32.0319, -84.3936]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/two-year-anniversary-of-our-mother-earth-columns-in-the-message.jpg"
+  alt="Jimmy Carter"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -18,6 +24,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 With much gratitude to Bishop Joseph M. Siegel, publisher of The Message, and Tim Lilley, editor, we
 celebrate two years of writing Our Mother Earth monthly. Every column is available by visiting
