--- a/united-states-conference-of-catholic-bishops-address-care-for-creation.mdx
+++ b/united-states-conference-of-catholic-bishops-address-care-for-creation.mdx
@@ -17,6 +17,12 @@ lat_lng: [32.7157, -117.1611]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/united-states-conference-of-catholic-bishops-address-care-for-creation.jpg"
+  alt="Wind Turbines in a field at sunset."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -24,6 +30,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Did you know the United States Conference of Catholic Bishops Committee on Domestic Justice
 and Human Development sent a letter to Congress on Budget Reconciliation and Climate
