--- a/water-quality-wisdom-and-our-commitment-for-a-greener-and-healthier-world.mdx
+++ b/water-quality-wisdom-and-our-commitment-for-a-greener-and-healthier-world.mdx
@@ -13,12 +13,20 @@ lat_lng: [39.1031, -84.5120]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/water-quality-wisdom-and-our-commitment-for-a-greener-and-healthier-world.jpg"
+  alt="Group of people picking up trash on the beach."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
 
 **Editor’s note:** _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for
 Our Common Home, Laudato Si’_
+
+## Introduction
 
 Did you know about 60% of our bodies are comprised of water, and there is only 3% freshwater
 on Earth? Without clean drinking water, we cannot survive. Polluted water can cause cancer,
@@ -45,12 +53,12 @@ green roofs, wetlands, prairies, temperate forests and rainforests. These habita
 groundwater levels, reduce erosion, and capture carbon dioxide. If we maintain water balances
 and stop pollution, we can focus on purifying our water.
 
-“As recently as 2015, the U.S. Environmental Protection Agency named the Ohio River as one of
-the country&#39;s most polluted. Industrial contaminants, including the “forever chemical”
+“As recently as 2015, the U.S. Environmental Protection Agency named the Ohio River as one of
+the country&#39;s most polluted. Industrial contaminants, including the “forever chemical”
 perfluorooctanoic acid, have been detected ….” (April Johnston, November 15, 2019 in Energy
 and Environment, ‘That’s Vinegar’: The Ohio River’s History of Contamination and Progress).
 Nonetheless, municipalities along its course treat this water following the Safe Drinking Water
-Act (1974), where USEPA sets legal limits for many contaminants. Other watchdogs of the Ohio
+Act (1974), where USEPA sets legal limits for many contaminants. Other watchdogs of the Ohio
 River are the Army Corp of Engineers and the Ohio River Valley Water Sanitation Commission.
 
 Additional water-treatment methods include wetlands and two-stage ditches. An excellent
