--- a/wetlands-clean-air-and-water-and-save-soil.mdx
+++ b/wetlands-clean-air-and-water-and-save-soil.mdx
@@ -7,7 +7,7 @@ state? Today, there are 3.5% wetland acres in the State – a loss of 85% (IDNR,
 Conservation Plan, June 1996). One million of these acres were in the Grand Kankakee Marsh
 (Jack Klasey, 2/2/19, Daily Journal, Kankakee, Illinois) which has been effectively lost today."
 categories: ["Cry-of-the-Earth"]
-cover_image: "/images/wetlands-clean-air-and-water-and-save-soil.jpg"
+image: "/images/wetlands-clean-air-and-water-and-save-soil.jpg"
 lat_lng: [40.5512, -85.6024]
 news_category: "Our Planet Earth Article"
 ---
