--- a/bees-butterflies-and-earthworms.mdx
+++ b/bees-butterflies-and-earthworms.mdx
@@ -12,6 +12,12 @@ lat_lng: [19.4326, -99.1332 ]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/bees-butterflies-and-earthworms.jpg"
+  alt="bee on a flower"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -19,6 +25,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 In 1963, Peter, Paul and Mary (an American folk group) released their version of the Bob Dylan
 song “Blowin’ in the Wind.” In it, they sing, “Where have all the flowers gone?” Today, these
