--- a/climate-migrants.mdx
+++ b/climate-migrants.mdx
@@ -9,40 +9,39 @@ lat_lng: [36.7783, -119.4179]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/climate-migrants.webp"
+  alt="a caravan of migrants walking on the street"
+  priority={true}
+/>
+
 **Photo Credit**: ENCARNI PINDADO and BBC
 
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed. M.S.
 
-Our Planet Earth
+**Our Planet Earth**
 
 **Author’s note**: _This worldwide website encourages, inspires, and informs people to act now, and to have an ecological conversion － so we can all Care for Our Common Home._
 
-## **Introduction**
+## Introduction
 
 [The International Catholic Migration Commission (ICMC)](https://connect.icmc.net/what-and-who-are-climate-refugees/) said, “Climate refugees also referred to as **climate change refugees** and **climate migrants** are individuals who have been displaced from their homes due to natural disasters and climate change. This includes floods, earthquakes, hurricanes, desertification, droughts, rising sea levels, and more. These events not only affect the safety of individuals, but can also cause food, water, and other long-term resource shortages that push people from their homes”. They also said, the term “climate migrant” is more accurate than climate change refugee because, much like internally [displaced persons](https://connect.icmc.net/icmc-displaced-people/), climate migrants are not recognized as refugees under [international refugee law](https://connect.icmc.net/what-is-the-1951-refugee-convention-and-who-does-it-protect/). This means they do not have the same protections and rights when seeking asylum as people who have fled their home country to escape persecution based on religion, race, nationality, or political opinion.
 
 Nonetheless, climate change is happening throughout the world, and it’s changing weather patterns from earlier years. These changes come from global warming where greenhouse gases absorb heat from the sun in the atmosphere. Looking at but one greenhouse gas called carbon dioxide (CO2); it remains in the atmosphere for hundreds to a thousand years. Our goal is to stop burning fossil fuels that emit CO2 and use renewable forms of energy like solar, wind, geothermal, or hydroelectric. Burning fossil fuels worsens conditions in the atmosphere to become more heated, and thus creating greater climate change effects. Did you know our atmosphere before the Industrial Revolution in the mid-1700’s was 280 ppm (parts per million) or less, and based on the annual report from the [National Oceanic and Atmospheric Administration’s Global Monitoring Lab](https://www.climate.gov/news-features/understanding-climate/climate-change-atmospheric-carbon-dioxide), the global average atmospheric CO2 level in 2022 was 417.06 ppm, setting a new record high.
 
-<img
-  src="/images/article-pictures/CO2_emissions_vs_concentrations_1751-2022.png"
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/co2-emissions-vs-concentrations-1751-2022.png"
   alt="Chart of CO2 emissions vs concentrations"
+  priority={false}
 />
 
 Global warming can change the jet stream which can change ocean currents. All of these cause weather patterns to change from what they were at an earlier time to something much more different today. For instance, some places have heavy rainfall and flooding for extended periods of time, while other areas experience the exact opposite with lack of rainfall and droughts for extended periods of time. If these conditions continue year after year, it forces people to migrate from their homes to other areas to survive. One example is in small island developing states where sea level rise is inundating islands causing people to leave.
 
-## **What Can You Do?**
+## What Can You Do?
 
 “[The United Nations High Commissioner for Refugees](https://www.unhcr.org/news/press-releases/unhcr-calls-concerted-action-forced-displacement-hits-new-record-2022) calls for concerted actions since forced displacement hit a new record high in 2022 as driven by the Ukraine war; revised estimates for Afghan refugees; and further fighting, especially in Sudan; all pushing the global total to 110 million”. An excellent humanitarian you tube video is “May God bless your journey” where volunteers drop water, food, and messages of strength for migrants. We can make a difference by funding, praying, and supporting equal rights for all God’s children.
 
-<iframe
-  width="900"
-  height="500"
-  src="https://www.youtube.com/embed/WN1STPmlaN8?start=1"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-  allowfullscreen
-></iframe>
+<Video id="WN1STPmlaN8" />
 
 According to the [World Bank Report](https://www.worldbank.org/en/news/press-release/2021/09/13/climate-change-could-force-216-million-people-to-migrate-within-their-own-countries-by-2050) released in September 2021, more than 200 million people are likely to migrate over the next three decades because of extreme weather events or from the slow degradation of their environment. Furthermore, negotiators from [COP26](https://insideclimatenews.org/news/02112021/climate-refugees-international-law-cop26) are unlikely to deal with the challenges posed by climate migration, a failure that some experts say shows “a lack of political will”.
 
