--- a/do-trees-make-you-healthier.mdx
+++ b/do-trees-make-you-healthier.mdx
@@ -12,6 +12,12 @@ lat_lng: [38.2527, -85.7585]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/do-trees-make-you-healthier.jpg"
+  alt="Looking up in a forest of trees"
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -19,6 +25,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Have you heard about the Louisville, Kentucky, “Green Heart” project －“Do trees make you
 healthier?” This 6-year study (the first of its kind) will transform four neighborhoods in South
