--- a/pope-francis-calls-us-to-action-on-ecological-issues.mdx
+++ b/pope-francis-calls-us-to-action-on-ecological-issues.mdx
@@ -13,6 +13,12 @@ lat_lng: [41.9028, 12.4964]
 news_category: "Our Planet Earth Article"
 ---
 
+<CustomImage
+  src="https://raw.githubusercontent.com/MCervone14/our-planet-earth-articles/main/images/pope-francis-calls-us-to-action-on-ecological-issues.jpg"
+  alt="pope francis looking away from the camera."
+  priority={true}
+/>
+
 Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gish, Ed.M.S.
 
 **Our Planet Earth**
@@ -20,6 +26,8 @@ Deacon Tom Cervone, Ph.D., Sister Maureen Houlihan, D.C., and Nicole Cervone-Gis
 **Editor’s note:**
 _This series takes a deeper look at Pope Francis’ 2015 encyclical ― On Care for Our Common
 Home, Laudato Si’ and his 2021 Platform Goals._
+
+## Introduction
 
 Did you know that, on May 24, 2015, Pope Francis signed an encyclical called “Laudato Si’ –
 On Care for our Common Home?” Five years later, he announced an Anniversary Year from
